service-discovery/k8s/01-namespace-config.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: consul
  labels:
    name: consul
    app.kubernetes.io/name: consul
    app.kubernetes.io/component: service-discovery
